Fix to bug 14368 - Win32 - F10 key does not activate the menu bar. r=dean_tessman@hotmail.com, sr=hyatt@netscape.com