widget/src/windows/nsWindow.cpp
@@ -2923,8 +2923,12 @@ PRBool nsWindow::ProcessMessage(UINT msg, WPARAM wParam, LPARAM lParam, LRESULT 
 	             result = PR_FALSE;
             }
 
-            if (wParam == VK_MENU) {
-              // This is required to make XP menus work.
+            if (wParam == VK_MENU || wParam == VK_F10) {
+              // This is required to prevent Windows
+              // default menu processing getting in the
+              // way of XP menus and key handling.
+              // Without this we call DefWindowProc which will 
+              // send us WM_COMMAND and/or WM_SYSCOMMAND messages.
               // Do not remove!  Talk to me if you have
               // questions. - hyatt@netscape.com
               result = PR_TRUE;
